2007-02-08  Lluis Sanchez Gual <lluis@novell.com> 

	* MakefileProjectServiceExtension.cs: After reading a project, reset
	  the needs building flag (to ignore changes done while loading)
	* Makefile.am: distckeck fixes.

2007-02-08  Ankit Jain <jankit@novell.com> 

	* MakefileData.cs: OutputFileName can be null for generic projects.

2007-02-08  Ankit Jain <jankit@novell.com> 

	* CustomMakefile.cs: Make Regex for makefile variables static.

2007-02-08  Ankit Jain  <jankit@novell.com>

	* MakefileProjectServiceExtension.cs (Load): Resolve project references
	once the top-level combine has loaded.
	* MakefileData.cs: Cache gac refererences to prevent repeats. Remove
	repeats from the project file, if any. Save the makefile after resolving
	project references.
	Add only valid assemblies as Gac refs, others could be project references.
	Prevent repeats for assembly/project references.

2007-02-08  Ankit Jain  <jankit@novell.com>

	* MakefileOptionPanelWidget.cs (.ctor): Don't set .Sensitive for
	fileEntryMakefilePath.

2007-02-07  Lluis Sanchez Gual <lluis@novell.com> 

	* MakefileProjectServiceExtension.cs: Reset the needs building flag
	  after successfully building a project.
	* MakefileData.cs: Cosmetic fixes. Remove "./" from relative names, and
	  keep file lists sorted.

2007-02-07  Ankit Jain  <jankit@novell.com>

	* MakefileOptionPanelWidget.cs (Store): Save 'disabled' state.

2007-02-07  Lluis Sanchez Gual <lluis@novell.com> 

	* MakefileProjectServiceExtension.cs: Track api changes. In
	  GetNeedsBuilding, return what the default implementation provides.
	* MonoDevelop.Autotools.addin.xml: Unregistered the makefile reader.
	* MonoDevelop.Autotools.mdp: Minor update.

2007-02-07  Ankit Jain  <jankit@novell.com>

	* CustomMakefile.cs: Fix regex to allow empty variables.

2007-02-07  Ankit Jain  <jankit@novell.com>

	* MakefileData.cs (encodeValues): New. Dictionary to keep track of which
	variables to encode when emitting.