@@ -1,3 +1,8 @@
+2007-02-09  Ankit Jain <jankit@novell.com> 
+
+	* MakefileData.cs: Keep the list of references sorted in the makefile.
+	* CustomMakefile.cs: Write to the makefile only if something changed.
+
 2007-02-08  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MakefileProjectServiceExtension.cs: After reading a project, reset
